build: Add Java options to prevent warnings running JDK24+, remove deprecated options (#820)